# comm-24sessions

./: .gitignore  Cargo.toml  README.md  config.sample.toml  schema.sql
.github/workflows/: lint.yaml  rust.yml  update.yaml
attribute-ui/: attribute.css  attribute.js  config.js  index.html  package.json
attribute-ui/src/: index.scss  index.tsx  translations.ts
attribute-ui/src/components/: App.tsx  AttrCard.tsx  NoAttrs.tsx  PoweredBy.tsx
choose-ui/: .eslintrc.json  .gitignore  config.js  index.html  package.json  tsconfig.json
choose-ui/src/: index.tsx  styled.d.ts  theme.ts
choose-ui/src/components/: Action.tsx  App.tsx  Header.tsx  Layout.tsx  Title.tsx
choose-ui/src/components/common/: Actions.tsx  Back.tsx  Box.tsx  Button.tsx  Contained.tsx  Duo.tsx  LinkArrow.tsx  PictureDiv.tsx  PictureRow.tsx  Switch.tsx
src/: config.rs  error.rs  jwt.rs  main.rs  session.rs  types.rs
